conseguiu ler a placa da moto

--- a/detect.ipynb
+++ b/detect.ipynb
@@ -20,9 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/joao/Documents/VisComp/compvis-car/.venv/lib/python3.12/site-packages/paddle/utils/cpp_extension/extension_utils.py:711: UserWarning: No ccache found. Please be aware that recompiling all source files may be required. You can download and install ccache from: https://github.com/ccache/ccache/blob/master/doc/INSTALL.md\n",
+      "  warnings.warn(warning_message)\n"
+     ]
+    }
+   ],
    "source": [
     "from ultralytics import YOLO\n",
     "import matplotlib.pyplot as plt\n",
@@ -42,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,52 +146,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "import re\n",
+    "from paddleocr import PaddleOCR\n",
+    "\n",
     "def change_char_in_position(word, position):\n",
-    "    # Change the character at the specified position to a letter\n",
     "    if position < len(word):\n",
     "        if word[position].isdigit():\n",
     "            digit = word[position]\n",
-    "            # Se for 8 troca por B, se for 1 troca por I\n",
     "            if digit == '8':\n",
     "                word = word[:position] + 'B' + word[position+1:]\n",
     "            elif digit == '1':\n",
     "                word = word[:position] + 'I' + word[position+1:]\n",
     "    return word\n",
     "\n",
+    "def detect_blue_strip(image_path):\n",
+    "    image = cv2.imread(image_path)\n",
+    "    if image is None:\n",
+    "        return False\n",
+    "\n",
+    "    # Recorta a parte de cima da imagem (20% superior)\n",
+    "    height = image.shape[0]\n",
+    "    top_part = image[0:int(height * 0.2), :]\n",
+    "\n",
+    "    # Converte para HSV para facilitar a detecção de azul\n",
+    "    hsv = cv2.cvtColor(top_part, cv2.COLOR_BGR2HSV)\n",
+    "    lower_blue = np.array([100, 50, 50])\n",
+    "    upper_blue = np.array([140, 255, 255])\n",
+    "    mask = cv2.inRange(hsv, lower_blue, upper_blue)\n",
+    "\n",
+    "    # Calcula a proporção de pixels azuis\n",
+    "    blue_ratio = cv2.countNonZero(mask) / (top_part.shape[0] * top_part.shape[1])\n",
+    "    return blue_ratio > 0.05  # Se mais de 5% for azul, consideramos placa nova\n",
+    "\n",
     "ocr = PaddleOCR(use_angle_cls=True, lang='en', show_log=False)\n",
     "\n",
     "def extract_plate_from_image(image_path):\n",
-    "    # Load model\n",
+    "    is_new_plate = detect_blue_strip(image_path)\n",
     "    result = ocr.ocr(image_path, cls=True)\n",
     "    \n",
     "    if not result or result[0] == None:\n",
     "        print(\"No text detected.\")\n",
     "        return None    \n",
-    "    is_new_plate = False\n",
     "    \n",
     "    detected_words = []\n",
     "    for line in result:\n",
     "        for word_info in line:\n",
     "            if word_info[1][0].lower() == \"brasil\":\n",
-    "                is_new_plate = True\n",
+    "                is_new_plate = True  # reforça com OCR, mas a imagem é mais confiável\n",
     "            else:\n",
     "                detected_words.append((word_info[1][0], word_info[1][1]))\n",
     "                \n",
     "    print(f\"Palavras detectadas: {detected_words}\")\n",
-    "                \n",
-    "                \n",
     "    print(f\"É nova placa? {is_new_plate}\")    \n",
+    "    \n",
     "    for word_tuple in detected_words:\n",
     "        word = word_tuple[0].replace(\"-\", \"\")\n",
     "        confidence = word_tuple[1]                \n",
     "            \n",
-    "        # Deve ter o formato \"XXX9999\" ou \"XXX9X99\"\n",
-    "        \n",
     "        if (re.fullmatch(r'[A-Z]{3}\\d{4}', word) and not is_new_plate) or re.fullmatch(r'[A-Z]{3}\\d[A-Z]\\d{2}', word):\n",
     "            return word\n",
     "        \n",
     "        else:\n",
-    "            # Try to fix plate text: characters 0,1,2 must be letters.\n",
     "            if word[0].isdigit():\n",
     "                word = change_char_in_position(word, 0)\n",
     "            if word[1].isdigit():\n",
@@ -195,7 +221,9 @@
     "            if re.match(r'^[A-Z]{3}\\d{4}$', word) or re.match(r'^[A-Z]{3}\\d{1}[A-Z]\\d{2}$', word):\n",
     "                return word\n",
     "            \n",
-    "    return None"
+    "        \n",
+    "            \n",
+    "    return None\n"
    ]
   },
   {
@@ -207,9 +235,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing imgs/52.png\n",
+      "\n",
+      "image 1/1 /home/joao/Documents/VisComp/compvis-car/imgs/52.png: 384x640 2 License_Plates, 69.1ms\n",
+      "Speed: 3.0ms preprocess, 69.1ms inference, 212.9ms postprocess per image at shape (1, 3, 384, 640)\n"
+     ]
+    }
+   ],
    "source": [
     "imgs_path = \"imgs/\"\n",
     "if not os.path.exists(imgs_path):\n",
@@ -239,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -247,8 +286,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "image 1/1 /home/louis/Documents/7/compvis/compvis-car/imgs/21.png: 384x640 3 License_Plates, 195.2ms\n",
-      "Speed: 1.6ms preprocess, 195.2ms inference, 0.8ms postprocess per image at shape (1, 3, 384, 640)\n"
+      "image 1/1 /home/joao/Documents/VisComp/compvis-car/imgs/21.png: 384x640 3 License_Plates, 62.4ms\n",
+      "Speed: 1.7ms preprocess, 62.4ms inference, 0.8ms postprocess per image at shape (1, 3, 384, 640)\n"
      ]
     },
     {
@@ -289,9 +328,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing cropped_0_0.png\n",
+      "Palavras detectadas: [('FWR', 0.9598544239997864), ('5886', 0.9001538753509521)]\n",
+      "É nova placa? True\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "string index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mIndexError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m img \u001b[38;5;129;01min\u001b[39;00m imgs:\n\u001b[32m      2\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mProcessing \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mimg\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m     plate = \u001b[43mextract_plate_from_image\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg\u001b[49m\u001b[43m)\u001b[49m   \n\u001b[32m      4\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m plate:\n\u001b[32m      5\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mDetected plate: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mplate\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 70\u001b[39m, in \u001b[36mextract_plate_from_image\u001b[39m\u001b[34m(image_path)\u001b[39m\n\u001b[32m     68\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m word[\u001b[32m2\u001b[39m].isdigit():\n\u001b[32m     69\u001b[39m     word = change_char_in_position(word, \u001b[32m2\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m70\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_new_plate \u001b[38;5;129;01mand\u001b[39;00m \u001b[43mword\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m4\u001b[39;49m\u001b[43m]\u001b[49m.isdigit():\n\u001b[32m     71\u001b[39m     word = change_char_in_position(word, \u001b[32m4\u001b[39m)\n\u001b[32m     73\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m re.match(\u001b[33mr\u001b[39m\u001b[33m'\u001b[39m\u001b[33m^[A-Z]\u001b[39m\u001b[38;5;132;01m{3}\u001b[39;00m\u001b[33m\\\u001b[39m\u001b[33md\u001b[39m\u001b[38;5;132;01m{4}\u001b[39;00m\u001b[33m$\u001b[39m\u001b[33m'\u001b[39m, word) \u001b[38;5;129;01mor\u001b[39;00m re.match(\u001b[33mr\u001b[39m\u001b[33m'\u001b[39m\u001b[33m^[A-Z]\u001b[39m\u001b[38;5;132;01m{3}\u001b[39;00m\u001b[33m\\\u001b[39m\u001b[33md\u001b[39m\u001b[38;5;132;01m{1}\u001b[39;00m\u001b[33m[A-Z]\u001b[39m\u001b[33m\\\u001b[39m\u001b[33md\u001b[39m\u001b[38;5;132;01m{2}\u001b[39;00m\u001b[33m$\u001b[39m\u001b[33m'\u001b[39m, word):\n",
+      "\u001b[31mIndexError\u001b[39m: string index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "for img in imgs:\n",
+    "    print(f\"Processing {img}\")\n",
+    "    plate = extract_plate_from_image(img)   \n",
+    "    if plate:\n",
+    "        print(f\"Detected plate: {plate}\")\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing image: cropped_0_0.png\n",
+      "Palavras detectadas: [('FWR', 0.9598544239997864), ('5886', 0.9001538753509521)]\n",
+      "É nova placa? True\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "string index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mIndexError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m img \u001b[38;5;129;01min\u001b[39;00m imgs:\n\u001b[32m      3\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mProcessing image: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mimg\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m     plate = \u001b[43mextract_plate_from_image\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      5\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mPlate detected: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mplate\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m      6\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m plate:\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 70\u001b[39m, in \u001b[36mextract_plate_from_image\u001b[39m\u001b[34m(image_path)\u001b[39m\n\u001b[32m     68\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m word[\u001b[32m2\u001b[39m].isdigit():\n\u001b[32m     69\u001b[39m     word = change_char_in_position(word, \u001b[32m2\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m70\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_new_plate \u001b[38;5;129;01mand\u001b[39;00m \u001b[43mword\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m4\u001b[39;49m\u001b[43m]\u001b[49m.isdigit():\n\u001b[32m     71\u001b[39m     word = change_char_in_position(word, \u001b[32m4\u001b[39m)\n\u001b[32m     73\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m re.match(\u001b[33mr\u001b[39m\u001b[33m'\u001b[39m\u001b[33m^[A-Z]\u001b[39m\u001b[38;5;132;01m{3}\u001b[39;00m\u001b[33m\\\u001b[39m\u001b[33md\u001b[39m\u001b[38;5;132;01m{4}\u001b[39;00m\u001b[33m$\u001b[39m\u001b[33m'\u001b[39m, word) \u001b[38;5;129;01mor\u001b[39;00m re.match(\u001b[33mr\u001b[39m\u001b[33m'\u001b[39m\u001b[33m^[A-Z]\u001b[39m\u001b[38;5;132;01m{3}\u001b[39;00m\u001b[33m\\\u001b[39m\u001b[33md\u001b[39m\u001b[38;5;132;01m{1}\u001b[39;00m\u001b[33m[A-Z]\u001b[39m\u001b[33m\\\u001b[39m\u001b[33md\u001b[39m\u001b[38;5;132;01m{2}\u001b[39;00m\u001b[33m$\u001b[39m\u001b[33m'\u001b[39m, word):\n",
+      "\u001b[31mIndexError\u001b[39m: string index out of range"
+     ]
+    }
+   ],
    "source": [
     "plates = []\n",
     "for img in imgs:\n",
@@ -430,7 +527,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
