--- a/detect.ipynb
+++ b/detect.ipynb
@@ -95,34 +95,7 @@
     "            plt.axis('off')\n",
     "            plt.title(f'Cropped #{i}-{j}')\n",
     "            plt.show()\n",
-    "    return imgnames\n",
-    "\n",
-    "def classify_and_save(image_path):\n",
-    "    model = YOLO('last.pt')\n",
-    "    results = model(image_path)\n",
-    "    \n",
-    "    # Read the original image\n",
-    "    original_image = cv2.imread(image_path)\n",
-    "    imgnames = []\n",
-    "    \n",
-    "    # Iterate over results\n",
-    "    for i, result in enumerate(results):\n",
-    "        boxes = result.boxes.xyxy.cpu().numpy()  # Get bounding boxes in (x1, y1, x2, y2) format\n",
-    "\n",
-    "        for j, (x1, y1, x2, y2) in enumerate(boxes):\n",
-    "            # Convert coordinates to integers\n",
-    "            x1, y1, x2, y2 = map(int, [x1, y1, x2, y2])\n",
-    "\n",
-    "            # Crop the image\n",
-    "            cropped = original_image[y1:y2, x1:x2]\n",
-    "\n",
-    "            # Convert BGR to RGB for displaying\n",
-    "            cropped_rgb = cv2.cvtColor(cropped, cv2.COLOR_BGR2RGB)\n",
-    "            # Save the cropped image\n",
-    "            output_filename = f'plates/cropped_{i}_{j}.png'\n",
-    "            imgnames.append(output_filename)\n",
-    "            cv2.imwrite(output_filename, cropped)\n",
-    "            "
+    "    return imgnames            "
    ]
   },
   {
