--- a/plates/dataset.ipynb
+++ b/plates/dataset.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "11990723",
    "metadata": {},
    "outputs": [],
@@ -278,19 +278,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "2b7b95b8",
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 33\u001b[0m\n\u001b[1;32m      1\u001b[0m placas \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPYP5727\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mQUP8066\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     31\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFHP9G04\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m     32\u001b[0m ]\n\u001b[0;32m---> 33\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mplacas\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m30\u001b[39;49m\u001b[43m]\u001b[49m)\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -326,8 +322,17 @@
     "    'SWI3B77',\n",
     "    'GCZ7D94',\n",
     "    'FHP9G04',\n",
+    "    'CGN9J94',\n",
+    "    'GCZ7D94',\n",
+    "    'FHP9G04',\n",
+    "    'SUW1C12',\n",
+    "    'FWR5B86',\n",
+    "    'FHP9G04',\n",
+    "    'EXX7619',\n",
+    "    'DSV7C13',\n",
+    "    ''\n",
     "]\n",
-    "print(placas[30])"
+    "print(placas[38])"
    ]
   },
   {
