--- a/plates/dataset.ipynb
+++ b/plates/dataset.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "11990723",
    "metadata": {},
    "outputs": [],
@@ -278,20 +278,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "id": "2b7b95b8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "placas = [\n",
+    "placas_text = [\n",
     "    'PYP5727',\n",
     "    'QUP8066',\n",
     "    'ELS7575',\n",
@@ -330,58 +322,50 @@
     "    'FHP9G04',\n",
     "    'EXX7619',\n",
     "    'DSV7C13',\n",
-    "    ''\n",
-    "]\n",
-    "print(placas[38])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b7b2e542",
-   "metadata": {},
-   "source": [
-    "Rascunho:"
+    "    'DSV7C13',\n",
+    "    'SSZ5I11',\n",
+    "    'FNC1F27',\n",
+    "    'CUH4G26',\n",
+    "    'FHP9G04',\n",
+    "    'FHP9G04',\n",
+    "    'FWR5B86',\n",
+    "    'SWI3B77',\n",
+    "    'CUY1B80',\n",
+    "    'DES5518',\n",
+    "    'GKC4H60',\n",
+    "    'GAR4G31',\n",
+    "    'GHV7564',\n",
+    "    'GKC4H60',\n",
+    "    'FMJ6399',\n",
+    "    'ALF8F22',\n",
+    "    'FRY2I96',\n",
+    "    'GKC4H60',\n",
+    "    'BSX6F35',\n",
+    "    'GKC4H60',\n",
+    "    'DES5518',\n",
+    "    'GKC4H60',\n",
+    "    'GDY4G44',\n",
+    "    'STK3G35',\n",
+    "    'GCI4125'\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "14d9a9ab",
+   "execution_count": 30,
+   "id": "05448cdc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cria um dataframe para guardar: nome do arquivo, placa\n",
-    "\n",
-    "# Para cada placa detectada, tenta extrair o texto, o texto deve ser mostrado antes de ser salvo.\n",
-    "# Se o texto estiver correto, salva a linha no dataframe, se estiver incorreto, recebe o texto correto.\n",
-    "\n",
     "df = pd.DataFrame(columns=['filename', 'plate'])\n",
     "\n",
-    "for plate in os.listdir('plate_imgs'):\n",
-    "    # Extrai a placa da imagem\n",
-    "    image_path = os.path.join('plate_imgs', plate)\n",
-    "    plate_text = extract_plate_from_image(image_path)\n",
-    "    \n",
-    "    print(f\"Texto extraído: {plate_text} para a imagem {plate}\")\n",
-    "    cv2.imshow(\"Imagem\", cv2.imread(image_path))\n",
-    "    cv2.waitKey(0)\n",
-    "    cv2.destroyAllWindows()\n",
-    "    \n",
-    "    is_correct = input(\"O texto está correto? (s/n): \").strip().lower()\n",
-    "    if is_correct == 's':\n",
-    "        df.loc[len(df)] = {'filename': plate, 'plate': plate_text}\n",
-    "    else:\n",
-    "        correct_text = input(\"Digite o texto correto: \").strip()\n",
-    "        df.loc[len(df)] = {'filename': plate, 'plate': correct_text}"
+    "id = 0\n",
+    "for placa_text in placas_text:\n",
+    "    df.loc[id] = [f'plate_imgs/plate_{id}.jpg', placa_text]\n",
+    "id += 1\n",
+    "\n",
+    "df.to_csv('./plates.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5804696a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
