--- a/plates/dataset.ipynb
+++ b/plates/dataset.ipynb
@@ -237,10 +237,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "id": "ae85ed29",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Imagens encontradas: ['20240529_140146.jpg', '20240531_114609.jpg', '20240615_193520.jpg', '20240615_193524.jpg', '20240708_152002.jpg', '20240713_175228.jpg', '20240714_182233.jpg', '20240801_124532.jpg', 'IMG-20240810-WA0007.jpg', 'IMG-20240811-WA0004.jpg', 'IMG-20240919-WA0015.jpg', '20240921_134734.jpg', '20241006_084426.jpg', '20241101_211628.jpg', '20250222_170934.jpg', '20250317_122642.jpg']\n",
+      "16\n",
+      "\n",
+      "image 1/1 /home/louis/Documents/7/compvis/compvis-car/plates/../new_imgs/20240529_140146.jpg: 640x480 1 License_Plate, 213.9ms\n",
+      "Speed: 1.9ms preprocess, 213.9ms inference, 0.7ms postprocess per image at shape (1, 3, 640, 480)\n",
+      "\n",
+      "image 1/1 /home/louis/Documents/7/compvis/compvis-car/plates/../new_imgs/20240531_114609.jpg: 640x480 2 License_Plates, 222.7ms\n",
+      "Speed: 1.9ms preprocess, 222.7ms inference, 1.0ms postprocess per image at shape (1, 3, 640, 480)\n",
+      "\n",
+      "image 1/1 /home/louis/Documents/7/compvis/compvis-car/plates/../new_imgs/20240615_193520.jpg: 640x480 1 License_Plate, 222.9ms\n",
+      "Speed: 2.0ms preprocess, 222.9ms inference, 0.8ms postprocess per image at shape (1, 3, 640, 480)\n",
+      "\n",
+      "image 1/1 /home/louis/Documents/7/compvis/compvis-car/plates/../new_imgs/20240615_193524.jpg: 640x480 2 License_Plates, 222.0ms\n",
+      "Speed: 2.0ms preprocess, 222.0ms inference, 0.7ms postprocess per image at shape (1, 3, 640, 480)\n",
+      "\n",
+      "image 1/1 /home/louis/Documents/7/compvis/compvis-car/plates/../new_imgs/20240708_152002.jpg: 640x384 1 License_Plate, 204.2ms\n",
+      "Speed: 1.7ms preprocess, 204.2ms inference, 0.6ms postprocess per image at shape (1, 3, 640, 384)\n",
+      "\n",
+      "image 1/1 /home/louis/Documents/7/compvis/compvis-car/plates/../new_imgs/20240713_175228.jpg: 640x480 1 License_Plate, 241.2ms\n",
+      "Speed: 1.9ms preprocess, 241.2ms inference, 0.9ms postprocess per image at shape (1, 3, 640, 480)\n",
+      "\n",
+      "image 1/1 /home/louis/Documents/7/compvis/compvis-car/plates/../new_imgs/20240714_182233.jpg: 640x480 1 License_Plate, 231.5ms\n",
+      "Speed: 1.9ms preprocess, 231.5ms inference, 5.1ms postprocess per image at shape (1, 3, 640, 480)\n",
+      "\n",
+      "image 1/1 /home/louis/Documents/7/compvis/compvis-car/plates/../new_imgs/20240801_124532.jpg: 640x480 1 License_Plate, 253.3ms\n",
+      "Speed: 2.4ms preprocess, 253.3ms inference, 5.8ms postprocess per image at shape (1, 3, 640, 480)\n",
+      "\n",
+      "image 1/1 /home/louis/Documents/7/compvis/compvis-car/plates/../new_imgs/IMG-20240810-WA0007.jpg: 640x384 1 License_Plate, 185.7ms\n",
+      "Speed: 1.8ms preprocess, 185.7ms inference, 0.7ms postprocess per image at shape (1, 3, 640, 384)\n",
+      "\n",
+      "image 1/1 /home/louis/Documents/7/compvis/compvis-car/plates/../new_imgs/IMG-20240811-WA0004.jpg: 480x640 2 License_Plates, 222.3ms\n",
+      "Speed: 2.1ms preprocess, 222.3ms inference, 0.8ms postprocess per image at shape (1, 3, 480, 640)\n",
+      "\n",
+      "image 1/1 /home/louis/Documents/7/compvis/compvis-car/plates/../new_imgs/IMG-20240919-WA0015.jpg: 480x640 1 License_Plate, 212.8ms\n",
+      "Speed: 1.4ms preprocess, 212.8ms inference, 0.7ms postprocess per image at shape (1, 3, 480, 640)\n",
+      "\n",
+      "image 1/1 /home/louis/Documents/7/compvis/compvis-car/plates/../new_imgs/20240921_134734.jpg: 640x480 1 License_Plate, 227.8ms\n",
+      "Speed: 2.0ms preprocess, 227.8ms inference, 0.7ms postprocess per image at shape (1, 3, 640, 480)\n",
+      "\n",
+      "image 1/1 /home/louis/Documents/7/compvis/compvis-car/plates/../new_imgs/20241006_084426.jpg: 640x480 1 License_Plate, 229.2ms\n",
+      "Speed: 2.0ms preprocess, 229.2ms inference, 0.7ms postprocess per image at shape (1, 3, 640, 480)\n",
+      "\n",
+      "image 1/1 /home/louis/Documents/7/compvis/compvis-car/plates/../new_imgs/20241101_211628.jpg: 640x480 1 License_Plate, 252.5ms\n",
+      "Speed: 2.0ms preprocess, 252.5ms inference, 0.9ms postprocess per image at shape (1, 3, 640, 480)\n",
+      "\n",
+      "image 1/1 /home/louis/Documents/7/compvis/compvis-car/plates/../new_imgs/20250222_170934.jpg: 640x480 (no detections), 271.8ms\n",
+      "Speed: 2.0ms preprocess, 271.8ms inference, 0.6ms postprocess per image at shape (1, 3, 640, 480)\n",
+      "\n",
+      "image 1/1 /home/louis/Documents/7/compvis/compvis-car/plates/../new_imgs/20250317_122642.jpg: 640x480 2 License_Plates, 253.3ms\n",
+      "Speed: 2.0ms preprocess, 253.3ms inference, 0.9ms postprocess per image at shape (1, 3, 640, 480)\n"
+     ]
+    }
+   ],
    "source": [
     "# Carrega as imagens\n",
     "imgs = os.listdir('../new_imgs')\n",
@@ -256,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "id": "11990723",
    "metadata": {},
    "outputs": [],
@@ -275,7 +332,18 @@
    "execution_count": null,
    "id": "2b7b95b8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'LAH7609'"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "placas_text = [\n",
     "    'PYP5727',\n",
@@ -447,20 +515,64 @@
     "    'AUF3I00', # Errou trocou I por 1\n",
     "    'EID1C04',\n",
     "    'GCR9G34',\n",
+    "    'LAH7609',\n",
+    "    'FTA0838',\n",
+    "    'FAM1598',\n",
+    "    'EEJ9J55',\n",
+    "    'FVP9J65',\n",
+    "    'FVP9J65',\n",
+    "    'EUL5915' # Regex para remover :\n",
+    "    'SWI1H01',\n",
+    "    'SSS1G94',\n",
+    "    'FEE8D05',\n",
+    "    'SSS1G94',\n",
+    "    'DZ02929', # Remover '-'\n",
+    "    'KNE6294',\n",
+    "    'FUP2C96',\n",
+    "    'LMTODO3',\n",
+    "    'FRH9H52',\n",
+    "    'TAT7H67',\n",
+    "    \n",
     "    \n",
     "]\n",
-    "placas_text[168]"
+    "placas_text[169]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "id": "b408dbd2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "plate_imgs/plate_186.jpg\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[ WARN:0@2628.659] global loadsave.cpp:268 findDecoder imread_('plate_imgs/plate_186.jpg'): can't open/read file: check file path/integrity\n"
+     ]
+    },
+    {
+     "ename": "error",
+     "evalue": "OpenCV(4.11.0) /io/opencv/modules/imgproc/src/color.cpp:199: error: (-215:Assertion failed) !_src.empty() in function 'cvtColor'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[121], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(img_path)\n\u001b[1;32m      5\u001b[0m img \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mimread(img_path)\n\u001b[0;32m----> 6\u001b[0m img_rgb \u001b[38;5;241m=\u001b[39m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcvtColor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mCOLOR_BGR2RGB\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m plt\u001b[38;5;241m.\u001b[39mimshow(img_rgb)\n\u001b[1;32m      8\u001b[0m plt\u001b[38;5;241m.\u001b[39maxis(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124moff\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31merror\u001b[0m: OpenCV(4.11.0) /io/opencv/modules/imgproc/src/color.cpp:199: error: (-215:Assertion failed) !_src.empty() in function 'cvtColor'\n"
+     ]
+    }
+   ],
    "source": [
     "# exibe a imgem: ./plate_imgs/plate_{id}.jpg\n",
-    "id_analisado =169\n",
+    "id_analisado =186\n",
     "img_path = f'plate_imgs/plate_{id_analisado}.jpg'\n",
     "print(img_path)\n",
     "img = cv2.imread(img_path)\n",
