--- a/detect.ipynb
+++ b/detect.ipynb
@@ -139,9 +139,14 @@
     "    blue_ratio = cv2.countNonZero(mask) / (top_strip.shape[0] * top_strip.shape[1])\n",
     "    return blue_ratio > 0.03\n",
     "\n",
+    "def limpar_placa(texto):\n",
+    "    \"\"\"Remove qualquer caractere que não seja letra ou número.\"\"\"\n",
+    "    return re.sub(r'[^A-Z0-9]', '', texto.upper())\n",
     "\n",
     "def correct_plate(word, is_new_plate):\n",
-    "    word = word.replace(\"-\", \"\")\n",
+    "    word = word.replace(\"-\", \"\").replace(\".\", \"\").replace(\" \", \"\")\n",
+    "    word = limpar_placa(word)\n",
+    "\n",
     "    if len(word) < 7:\n",
     "        return None\n",
     "\n",
@@ -155,6 +160,7 @@
     "    # Verifica os dois formatos válidos\n",
     "    if re.match(r'^[A-Z]{3}\\d{4}$', word) or re.match(r'^[A-Z]{3}\\d[A-Z]\\d{2}$', word):\n",
     "        return word\n",
+    "\n",
     "    return None\n",
     "\n",
     "ocr = PaddleOCR(use_angle_cls=True, lang='en', show_log=False)\n",
@@ -356,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
