--- a/plates/dataset.ipynb
+++ b/plates/dataset.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "b116419e",
    "metadata": {},
    "outputs": [],
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "ac478c9d",
    "metadata": {},
    "outputs": [],
@@ -444,7 +444,13 @@
     "from paddleocr import PaddleOCR\n",
     "import re\n",
     "\n",
-    "ocr = PaddleOCR(use_angle_cls=True, lang='en', show_log=False)\n",
+    "ocr = PaddleOCR(\n",
+    "        use_angle_cls=True, \n",
+    "        lang='en', \n",
+    "        show_log=False,\n",
+    "        det_db_thresh=0.3,\n",
+    "        det_db_box_thresh=0.5\n",
+    "    )\n",
     "\n",
     "def change_char_in_position(word, position):\n",
     "    if position < len(word):\n",
@@ -464,7 +470,7 @@
     "    image = cv2.imread(image_path)\n",
     "    if image is None:\n",
     "        return False\n",
-    "\n",
+    "    \n",
     "    height, width = image.shape[:2]\n",
     "    top_strip = image[0:int(height * 0.25), 0:width]  # faixa de cima\n",
     "\n",
@@ -502,22 +508,27 @@
     "\n",
     "    return None\n",
     "\n",
+    "\n",
     "def extract_plate_from_image(image_path):\n",
+    "    # Preprocess the image\n",
     "    is_new_plate = detect_blue_strip(image_path)\n",
     "    result = ocr.ocr(image_path, cls=True)\n",
-    "    \n",
+    "        \n",
     "    if not result or result[0] is None:\n",
+    "        print(\"Nenhum resultado encontrado.\")\n",
     "        return None    \n",
     "    \n",
     "    detected_words = []\n",
     "    for line in result:\n",
     "        for word_info in line:\n",
     "            text = word_info[1][0].replace(\" \", \"\")\n",
+    "            text = limpar_placa(text)\n",
+    "            print(f\"Texto detectado: {text}\")\n",
     "            if text.lower() == \"brasil\":\n",
     "                is_new_plate = True\n",
     "            else:\n",
     "                detected_words.append((text, word_info[1][1]))  # (text, confidence)\n",
-    "    \n",
+    "                    \n",
     "    # print(f\"Palavras detectadas: {detected_words}\")\n",
     "    # print(f\"É nova placa? {is_new_plate}\")    \n",
     "    \n",
@@ -531,44 +542,39 @@
     "    for i in range(len(detected_words)):\n",
     "        for j in range(i+1, len(detected_words)):\n",
     "            combined = detected_words[i][0] + detected_words[j][0]\n",
+    "            print(f\"Combinando: {combined}\")\n",
     "            corrected = correct_plate(combined, is_new_plate)\n",
     "            if corrected:\n",
-    "                return corrected\n",
+    "                return corrected    \n",
     "\n",
     "    return None\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "feb2912c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n",
-      "Placa lida: LMT6114\n",
-      "Gabarito: LMT6I14\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "id_analisado = 11\n",
+    "id_analisado = 12\n",
     "img_path = f'plate_imgs/plate_{id_analisado}.jpg'\n",
     "img = cv2.imread(img_path)\n",
     "\n",
-    "cv2.imshow('img', img)\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()\n",
+    "# cv2.imshow('img', img)\n",
+    "# cv2.waitKey(0)\n",
+    "# cv2.destroyAllWindows()\n",
+    "\n",
+    "# Call it with your image path\n",
+    "plate = extract_plate_from_image(img_path)\n",
+    "print(f\"Detected plate: {plate}\")\n",
     "\n",
     "placa_lida = extract_plate_from_image(img_path)\n",
     "gabarito = df[df['filename'] == img_path]['plate'].values[0]\n",
     "\n",
-    "print(detect_blue_strip(img_path))\n",
+    "# print(detect_blue_strip(img_path))\n",
     "\n",
-    "print(f'Placa lida: {placa_lida}')\n",
+    "print(f'Placa lida: {plate}')\n",
     "print(f'Gabarito: {gabarito}')"
    ]
   },
@@ -590,79 +596,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "ab83901c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>filename</th>\n",
-       "      <th>plate</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>plate_imgs/plate_0.jpg</td>\n",
-       "      <td>PYP5727</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>plate_imgs/plate_1.jpg</td>\n",
-       "      <td>QUP8066</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>plate_imgs/plate_2.jpg</td>\n",
-       "      <td>ELS7575</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>plate_imgs/plate_3.jpg</td>\n",
-       "      <td>EJA9040</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>plate_imgs/plate_4.jpg</td>\n",
-       "      <td>ELS7575</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 filename    plate\n",
-       "0  plate_imgs/plate_0.jpg  PYP5727\n",
-       "1  plate_imgs/plate_1.jpg  QUP8066\n",
-       "2  plate_imgs/plate_2.jpg  ELS7575\n",
-       "3  plate_imgs/plate_3.jpg  EJA9040\n",
-       "4  plate_imgs/plate_4.jpg  ELS7575"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.read_csv('./plates.csv')\n",
     "df.head()"
@@ -670,146 +607,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "6f411b4a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>filename</th>\n",
-       "      <th>plate</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>201</th>\n",
-       "      <td>plate_imgs/plate_201.jpg</td>\n",
-       "      <td>PZS1E46</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>202</th>\n",
-       "      <td>plate_imgs/plate_202.jpg</td>\n",
-       "      <td>QQR2C08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>203</th>\n",
-       "      <td>plate_imgs/plate_203.jpg</td>\n",
-       "      <td>GDD8768</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>204</th>\n",
-       "      <td>plate_imgs/plate_204.jpg</td>\n",
-       "      <td>QQR2C08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>205</th>\n",
-       "      <td>plate_imgs/plate_205.jpg</td>\n",
-       "      <td>QQI5J52</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     filename    plate\n",
-       "201  plate_imgs/plate_201.jpg  PZS1E46\n",
-       "202  plate_imgs/plate_202.jpg  QQR2C08\n",
-       "203  plate_imgs/plate_203.jpg  GDD8768\n",
-       "204  plate_imgs/plate_204.jpg  QQR2C08\n",
-       "205  plate_imgs/plate_205.jpg  QQI5J52"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "81dff470",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total de placas: 206\n",
-      "Placa lida: None - Gabarito: EHJ9C82 img: plate_imgs/plate_5.jpg\n",
-      "Placa lida: LMT6114 - Gabarito: LMT6I14 img: plate_imgs/plate_11.jpg\n",
-      "Placa lida: None - Gabarito: PWY3G12 img: plate_imgs/plate_12.jpg\n",
-      "Placa lida: LHI7G15 - Gabarito: LMI7G15 img: plate_imgs/plate_15.jpg\n",
-      "Placa lida: None - Gabarito: CON1454 img: plate_imgs/plate_21.jpg\n",
-      "Placa lida: None - Gabarito: ELP1978 img: plate_imgs/plate_22.jpg\n",
-      "Placa lida: None - Gabarito: EHI0H58 img: plate_imgs/plate_24.jpg\n",
-      "Placa lida: GCZ7094 - Gabarito: GCZ7D94 img: plate_imgs/plate_25.jpg\n",
-      "Placa lida: SWI3877 - Gabarito: SWI3B77 img: plate_imgs/plate_27.jpg\n",
-      "Placa lida: GCZ7094 - Gabarito: GCZ7D94 img: plate_imgs/plate_28.jpg\n",
-      "Placa lida: None - Gabarito: GCZ7D94 img: plate_imgs/plate_31.jpg\n",
-      "Placa lida: FWR5886 - Gabarito: FWR5B86 img: plate_imgs/plate_34.jpg\n",
-      "Placa lida: None - Gabarito: EXX7619 img: plate_imgs/plate_36.jpg\n",
-      "Placa lida: None - Gabarito: DSV7C13 img: plate_imgs/plate_38.jpg\n",
-      "Placa lida: None - Gabarito: SSZ5I11 img: plate_imgs/plate_39.jpg\n",
-      "Placa lida: None - Gabarito: FWR5B86 img: plate_imgs/plate_44.jpg\n",
-      "Placa lida: None - Gabarito: SWI3B77 img: plate_imgs/plate_45.jpg\n",
-      "Placa lida: CUY1880 - Gabarito: CUY1B80 img: plate_imgs/plate_46.jpg\n",
-      "Placa lida: OES5518 - Gabarito: DES5518 img: plate_imgs/plate_47.jpg\n",
-      "Placa lida: FRY2196 - Gabarito: FRY2I96 img: plate_imgs/plate_54.jpg\n",
-      "Placa lida: STK3635 - Gabarito: STK3G35 img: plate_imgs/plate_61.jpg\n",
-      "Placa lida: GCZ7094 - Gabarito: GCZ7D94 img: plate_imgs/plate_63.jpg\n",
-      "Placa lida: None - Gabarito: GCZ7D94 img: plate_imgs/plate_67.jpg\n",
-      "Placa lida: None - Gabarito: DLZ1811 img: plate_imgs/plate_73.jpg\n",
-      "Placa lida: BSX4414 - Gabarito: BSX4411 img: plate_imgs/plate_79.jpg\n",
-      "Placa lida: CVI2000 - Gabarito: CVI2D00 img: plate_imgs/plate_83.jpg\n",
-      "Placa lida: None - Gabarito: BBJ0B66 img: plate_imgs/plate_94.jpg\n",
-      "Placa lida: None - Gabarito: TCD4H11 img: plate_imgs/plate_95.jpg\n",
-      "Placa lida: ESD9102 - Gabarito: FSD9I02 img: plate_imgs/plate_103.jpg\n",
-      "Placa lida: SCM6817 - Gabarito: SCH6B17 img: plate_imgs/plate_104.jpg\n",
-      "Placa lida: GBD5457 - Gabarito: GBD5467 img: plate_imgs/plate_107.jpg\n",
-      "Placa lida: FEM4474 - Gabarito: FFM4474 img: plate_imgs/plate_108.jpg\n",
-      "Placa lida: EPY5013 - Gabarito: FPV5013 img: plate_imgs/plate_109.jpg\n",
-      "Placa lida: None - Gabarito: ESU2J46 img: plate_imgs/plate_113.jpg\n",
-      "Placa lida: RTO9351 - Gabarito: RT09J51 img: plate_imgs/plate_115.jpg\n",
-      "Placa lida: None - Gabarito: GCF2J95 img: plate_imgs/plate_119.jpg\n",
-      "Placa lida: GEM3926 - Gabarito: GBM3926 img: plate_imgs/plate_121.jpg\n",
-      "Placa lida: GHM6362 - Gabarito: GHM6J62 img: plate_imgs/plate_122.jpg\n",
-      "Placa lida: None - Gabarito: FVCOE27 img: plate_imgs/plate_123.jpg\n",
-      "Placa lida: None - Gabarito: EOD4930 img: plate_imgs/plate_124.jpg\n",
-      "Placa lida: GOI0123 - Gabarito: GDI0123 img: plate_imgs/plate_130.jpg\n",
-      "Placa lida: None - Gabarito: QQB0F42 img: plate_imgs/plate_136.jpg\n",
-      "Placa lida: None - Gabarito: GED5A08 img: plate_imgs/plate_147.jpg\n",
-      "Placa lida: AUF3100 - Gabarito: AUF3I00 img: plate_imgs/plate_166.jpg\n",
-      "Placa lida: DZO2929 - Gabarito: DZQ2929 img: plate_imgs/plate_180.jpg\n",
-      "Placa lida: None - Gabarito: LMTODO3 img: plate_imgs/plate_183.jpg\n",
-      "Placa lida: None - Gabarito: EUQ1599 img: plate_imgs/plate_188.jpg\n",
-      "Placa lida: None - Gabarito: SVJ3A77 img: plate_imgs/plate_189.jpg\n",
-      "Placa lida: None - Gabarito: JCV9H90 img: plate_imgs/plate_196.jpg\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "acertou = 0\n",
     "errou = 0\n",
@@ -829,19 +640,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "bb28c704",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Placas lidas corretamente: 157 de 206\n",
-      "Taxa de acerto: 76.21%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"Placas lidas corretamente: {acertou} de {ids}\")\n",
     "print(f\"Taxa de acerto: {acertou/ids*100:.2f}%\")"
