--- a/plates/dataset.ipynb
+++ b/plates/dataset.ipynb
@@ -14,7 +14,8 @@
    "metadata": {},
    "source": [
     "Esse jupyter tem como objetivo percorrer as imagens presentes no diretório 'imgs\", separar as placas de carros, as quais terão seus textos extraídos.\n",
-    "Em seguida, será possível comparar os resultados obtidos com o OCR escolhido"
+    "\n",
+    "Assim, esse jupyter faz uso de uma abordagem semi-automática, onde o usuário adiciona as imagens a serem recortadas na pasta \"new_imgs\", e o código irá recortar essas imagens, salvando-as na pasta \"paste_imgs\". Em seguida, o usuário pode executar o OCR nas imagens recortadas, analisar o output e, se necessário, corrigir os textos. Por fim, será salvo um arquivo CSV com as informações de cada imagem, associando a imagem na pasta com o texto contido nela."
    ]
   },
   {
@@ -602,65 +603,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52662b1e",
+   "id": "ab176729",
    "metadata": {},
    "source": [
-    "## Benchmark do OCR"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab83901c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('./plates.csv')\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f411b4a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.tail()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "81dff470",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "acertou = 0\n",
-    "errou = 0\n",
-    "\n",
-    "ids = df.shape[0]\n",
-    "print(f\"Total de placas: {ids}\")\n",
-    "for id_analisado in range(ids):\n",
-    "    img_path = f'plate_imgs/plate_{id_analisado}.jpg'\n",
-    "    placa_lida = extract_plate_from_image(img_path)\n",
-    "    gabarito = df[df['filename'] == img_path]['plate'].values[0]\n",
-    "    if placa_lida != gabarito:\n",
-    "        print(f\"Placa lida: {placa_lida} - Gabarito: {gabarito} img: {img_path}\")\n",
-    "        errou += 1\n",
-    "    else:\n",
-    "        acertou += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb28c704",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f\"Placas lidas corretamente: {acertou} de {ids}\")\n",
-    "print(f\"Taxa de acerto: {acertou/ids*100:.2f}%\")"
+    "Observação: Para realizar o benchmark do modelo OCR, acese o jupyter `benchmark.ipynb` que está na mesma pasta deste jupyter."
    ]
   }
  ],
