--- a/train/training.ipynb
+++ b/train/training.ipynb
@@ -9,6 +9,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "178d6c26",
+   "metadata": {},
+   "source": [
+    "Link para o repositório do YOLOv11:\n",
+    "\n",
+    "https://universe.roboflow.com/roboflow-universe-projects/license-plate-recognition-rxg4e"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "7e45b282",
@@ -83,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "18e1d4cf",
    "metadata": {},
    "outputs": [
@@ -3212,7 +3222,7 @@
     "\n",
     "# Treina o modelo\n",
     "results = model.train(\n",
-    "    data = r\"C://Users/luis/Documents/compvis/teste2/data.yaml\",\n",
+    "    data = r\"C://Users/luis/Documents/compvis/compvis-car/train/data.yaml\",\n",
     "    epochs=100,\n",
     "    imgsz=640,\n",
     "    batch=16,\n",
